--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100075836503556%22%3A%22vWGGtup5%22%2C%22100078903639905%22%3A%22qQPtcWgI%22%7D",
+        "value": "%7B%2261578574348917%22%3A%22oFPW4sNR%22%2C%22100075836503556%22%3A%22Xx80K8yP%22%2C%2261566138525890%22%3A%22Abif8zMh%22%2C%22100078903639905%22%3A%22I4q8YJ1Z%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.697Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "datr",
-        "value": "2bGOaAITJ0LD79srCsbtWULv",
+        "value": "R2KKaAt2KE3vcOIGPsE5kvon",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "sb",
-        "value": "2bGOaKze1R0_XP7ScR-aL0wT",
+        "value": "SGKKaIVxhvwAlq2nNPWSO31C",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "vpd",
@@ -50,35 +50,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "pas",
-        "value": "100078903639905%3AwsQsLwAFgj%2C100075836503556%3AIWmLacv34D",
+        "value": "61578574348917%3An7NYRuyKM2%2C100075836503556%3AFj4Gd6VtJT%2C100078903639905%3AlOK5JQu0mK%2C61566138525890%3Aptr9CZwRLw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.625",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x918",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "locale",
@@ -86,61 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
-        "key": "ar_debug",
-        "value": "1",
+        "key": "m_pixel_ratio",
+        "value": "2.625",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x918",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "c_user",
-        "value": "100075836503556",
+        "value": "100078903639905",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.700Z",
+        "lastAccessed": "2025-08-24T10:32:43.700Z"
     },
     {
         "key": "xs",
-        "value": "4%3AxgaTxGfupNjgLA%3A2%3A1756028185%3A-1%3A-1",
+        "value": "48%3AKvcSmUos4Xev2g%3A2%3A1756029549%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.701Z",
+        "lastAccessed": "2025-08-24T10:32:43.701Z"
     },
     {
         "key": "fr",
-        "value": "0JhXIeR0iezdzcSI3.AWerj6IRppZhb5P6X6C8z-XLM2m3xlbxlZWXQQ2mEVdwzXqhYCg.BojrHZ..AAA.0.0.Boqt0b.AWf5qkcXHMtiJpIBRaJ0GtCoXpY",
+        "value": "0GWAN66ZVPUlbLMDb.AWc2zIscJhDk6HmeUCujV8P66r6B7TQunJYRdHh3EHZkw6KRTFg.BoimJI..AAA.0.0.Boqul2.AWdYvaFaLWxX5i_wkAMUdIRo1VM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101726357%3BT%3A29267136",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.701Z",
+        "lastAccessed": "2025-08-24T10:32:43.701Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1756028188",
+        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1756031350",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-24T09:37:53.560Z",
-        "lastAccessed": "2025-08-24T09:37:53.560Z"
+        "creation": "2025-08-24T10:32:43.701Z",
+        "lastAccessed": "2025-08-24T10:32:43.701Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100624100%3BT%3A29267189",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-24T10:32:43.701Z",
+        "lastAccessed": "2025-08-24T10:32:43.701Z"
     }
 ]
