--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.904Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.153Z",
+        "lastAccessed": "2025-08-25T07:51:37.153Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.153Z",
+        "lastAccessed": "2025-08-25T07:51:37.153Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "fr",
-        "value": "0GWAN66ZVPUlbLMDb.AWc8ZH36-yXPc5H4FqNmbh9qxy0ysPdWwBzHMq-Tl3akq2QU7No.BoimJI..AAA.0.0.BorA-6.AWdOw5rnmMR77PTEPU0fMArxJDQ",
+        "value": "0GWAN66ZVPUlbLMDb.AWegJ9Xsw00gpQxjVmCjgcGQtyo-h4P691-LOg8O6amVqPEudfo.BoimJI..AAA.0.0.BorBX-.AWfcwwcDUEKDotP9g6HJdR1_OgY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "fbl_st",
-        "value": "100633171%3BT%3A29268444",
+        "value": "100626347%3BT%3A29268471",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2902%3Btimestamp%3A1756106682",
+        "value": "v2%3Bclient_version%3A2902%3Btimestamp%3A1756108286",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T07:24:49.905Z",
-        "lastAccessed": "2025-08-25T07:24:49.905Z"
+        "creation": "2025-08-25T07:51:37.154Z",
+        "lastAccessed": "2025-08-25T07:51:37.154Z"
     }
 ]
